<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">proxie</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="displayUsersPreferenceKey">DisplayUsersPreferenceKey</string>
    <string name="displayUsersPreferenceTitle">Display Users</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginActivityLoginButton">Login</string>
    <string name="loginUsernameHint">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="errorIncorrectLogin">Incorrect username or password</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_forum">ForumActivity</string>
    <string name="forum_activity_filter_button">Filters</string>
    <string name="forum_activity_compose_button">Compose</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_map">Map</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="displayMessageLocationsPreferenceKey">DisplayMessageLocationsPreferenceKey</string>
    <string name="displayMessageLocationsPreferenceTitle">Display Message Locations</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="composeToHint">To:</string>
    <string name="composeMessageHint">Message:</string>
    <string name="sendButton">Send</string>
    <string name="cancelButton">Cancel</string>
    <string name="mapPreferenceCategoryTitle">Map Settings</string>
    <string name="mapPreferenceCategoryKey">mapPreferenceCategoryKey</string>
    <string name="forumPreferenceCategoryTitle">Forum Settings</string>
    <string name="forumPreferenceCategoryKey">forumPreferenceCategoryKey</string>
    <string name="stayLoggedInCheckboxTitle">Stay logged in</string>
    <string name="stayLoggedInCheckboxKey">stayLoggedInCheckboxKey</string>
    <string name="relayMessagesCheckboxTitle">Relay Messages</string>
    <string name="relayMessagesCheckboxKey">relayMessagesCheckboxKey</string>
    <string name="composePreferenceCategoryTitle">Compose Settings</string>
    <string name="composePreferenceCategoryKey">composePreferenceCategoryKey</string>
    <string name="includeSenderCheckboxTitle">Include sender</string>
    <string name="includeSenderCheckboxKey">includeSenderCheckboxKey</string>
    <string name="includeLatLongCheckboxTitle">Include Latitude and Longitude</string>
    <string name="includeLatLongCheckboxKey">includeLatLongCheckboxKey</string>
    <string name="maxNumberHopsEditTextTitle">Max Number of Hops</string>
    <string name="maxNumberHopsEditTextKey">maxNumberHopsEditTextKey</string>
    <string name="messageLifeEditTextTitle">Life of Message</string>
    <string name="messageLifeEditTextKey">messageLifeEditTextKey</string>
    <string name="title_activity_message_dialog">MessageDialog</string>

   <string name="uuid">4C8ad703-5dd3-4963-ac34-113da6f2e7ea</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>